@@ -1,5 +1,7 @@
 *SVN*
 
+* TimeWithZone respects config.active_support.use_standard_json_time_format [Geoff Buesing]
+
 * Add config.active_support.escape_html_entities_in_json to allow disabling of html entity escaping.  [rick]
 
 * Improve documentation. [Xavier Noria]
